--- a/serverless.yml
+++ b/serverless.yml
@@ -13,6 +13,12 @@ plugins:
 
 custom:
   bucket: ${self:service}-${self:provider.stage}
+  bucket_glue: ${self:custom.bucket}-glue-scripts
+  athena_db: ${self:custom.bucket}
+  remover:
+    buckets:
+      - ${self:custom.bucket}
+      - ${self:custom.bucket_glue}
 
 functions:
   unzip:
@@ -41,6 +47,20 @@ functions:
     environment:
         DEST_BUCKET: ${self:custom.bucket}
         DEST_KEY: extract/
+  load:
+    handler: lambda/load.handler
+    events:
+      - s3:
+          bucket: ${self:custom.bucket}
+          event: s3:ObjectCreated:*
+          rules:
+            - prefix: extract/
+            - suffix: .json
+    environment:
+        ATHENA_DB: ${self:custom.athena_db}
+        ATHENA_TABLE: messages
+        DEST_BUCKET: ${self:custom.bucket}
+        DEST_KEY: extract/
 
 resources:
   Resources:
@@ -50,10 +70,28 @@ resources:
         Role: arn:aws:iam::077590795309:role/serverless-data-pipeline-glue
         Command:   
           Name: pythonshell  
-          ScriptLocation: s3://aws-glue-target-serverless-data-pipeline-${self:provider.stage}/unzip.py
+          ScriptLocation: s3://${self:custom.bucket_glue}/unzip.py
         Name: unzip-${self:provider.stage}
-    
     S3GlueScripts:
       Type: AWS::S3::Bucket
       Properties:
-        BucketName: aws-glue-target-serverless-data-pipeline-${self:provider.stage}
+        BucketName: ${self:custom.bucket_glue}
+    AthenaMessageDatabase:
+      Type: AWS::Athena::NamedQuery
+      Properties:
+        Database: default
+        QueryString: >
+          CREATE EXTERNAL TABLE IF NOT EXISTS default.messages (
+          `id` string,
+          `from` string,
+          `to` string,
+          `cc` string,
+          `subject` string,
+          `date` string,
+          `attachments` array<string>,
+          `body` string
+          )
+          ROW FORMAT SERDE 'org.openx.data.jsonserde.JsonSerDe'
+          WITH SERDEPROPERTIES ('serialization.format' = '1')
+          LOCATION 's3://mailswitch-stg-processed/message_flow/extract_message_contents_messages/'
+          TBLPROPERTIES ('has_encrypted_data'='false');
