--- a/serverless.yml
+++ b/serverless.yml
@@ -13,12 +13,13 @@ plugins:
 
 custom:
   bucket: ${self:service}-${self:provider.stage}
-  bucket_glue: ${self:custom.bucket}-glue-scripts
+  bucket_glue_scripts: ${self:custom.bucket}-glue-scripts
+  glue_crawler: ${self:custom.bucket}-glue-crawler
   athena_db: ${self:custom.bucket}
   remover:
     buckets:
       - ${self:custom.bucket}
-      - ${self:custom.bucket_glue}
+      - ${self:custom.bucket_glue_scripts}
 
 functions:
   unzip:
@@ -34,7 +35,6 @@ functions:
         DEST_BUCKET: ${self:custom.bucket}
         DEST_KEY: unzip/
         JOB_NAME: unzip-${self:provider.stage}
-
   extract:
     handler: lambda/extract.handler
     events:
@@ -57,10 +57,7 @@ functions:
             - prefix: extract/
             - suffix: .json
     environment:
-        ATHENA_DB: ${self:custom.athena_db}
-        ATHENA_TABLE: messages
-        DEST_BUCKET: ${self:custom.bucket}
-        DEST_KEY: extract/
+      GLUE_CRAWLER: ${self:custom.glue_crawler}
 
 resources:
   Resources:
@@ -70,28 +67,19 @@ resources:
         Role: arn:aws:iam::077590795309:role/serverless-data-pipeline-glue
         Command:   
           Name: pythonshell  
-          ScriptLocation: s3://${self:custom.bucket_glue}/unzip.py
+          ScriptLocation: s3://${self:custom.bucket_glue_scripts}/unzip.py
         Name: unzip-${self:provider.stage}
     S3GlueScripts:
       Type: AWS::S3::Bucket
       Properties:
-        BucketName: ${self:custom.bucket_glue}
-    AthenaMessageDatabase:
-      Type: AWS::Athena::NamedQuery
+        BucketName: ${self:custom.bucket_glue_scripts}
+    GlueCrawler:
+      Type: AWS::Glue::Crawler
       Properties:
-        Database: default
-        QueryString: >
-          CREATE EXTERNAL TABLE IF NOT EXISTS default.messages (
-          `id` string,
-          `from` string,
-          `to` string,
-          `cc` string,
-          `subject` string,
-          `date` string,
-          `attachments` array<string>,
-          `body` string
-          )
-          ROW FORMAT SERDE 'org.openx.data.jsonserde.JsonSerDe'
-          WITH SERDEPROPERTIES ('serialization.format' = '1')
-          LOCATION 's3://mailswitch-stg-processed/message_flow/extract_message_contents_messages/'
-          TBLPROPERTIES ('has_encrypted_data'='false');
+        DatabaseName: ${self:custom.athena_db}
+        Name: ${self:custom.glue_crawler}
+        Role: arn:aws:iam::077590795309:role/serverless-data-pipeline-glue
+        TablePrefix: messages_
+        Targets:
+          S3Targets:
+            -  Path: s3://${self:custom.bucket}/extract/
