--- a/serverless.yml
+++ b/serverless.yml
@@ -5,7 +5,7 @@ provider:
   region: eu-central-1
   runtime: python3.7
   stage: ${opt:stage}
-  # add your own lambda role here
+  # add your own lambda role ARN here
   role: <YOUR_LAMBDA_ROLE_ARN_MUST_COME_HERE>
 
 plugins:
@@ -17,7 +17,7 @@ custom:
   glue_crawler: load-${self:provider.stage}
   glue_job: unzip-${self:provider.stage}
   glue_job_script_location: s3://${self:custom.bucket_glue_scripts}/unzip.py
-  # add your own glue role here
+  # add your own glue role ARN here
   glue_role: <YOUR_GLUE_ROLE_ARN_MUST_COME_HERE>
   athena_db: ${self:custom.bucket}
   remover:
